--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ cryptography==43.0.1
 Django==5.1.1
 django-encrypted-model-fields==0.6.5
 djangorestframework==3.15.2
+djangorestframework-simplejwt==5.3.1
 pycparser==2.22
 python-dotenv==1.0.1
 sqlparse==0.5.1
