--- a/site_app/requirements.txt
+++ b/site_app/requirements.txt
@@ -7,7 +7,7 @@ cryptography==43.0.1
 defusedxml==0.7.1
 dj-rest-auth==6.0.0
 Django==5.1.1
-django-allauth==0.61.1
+django-allauth[mfa,socialaccount]==65.0.2
 django-cors-headers==4.4.0
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
