--- a/site_app/requirements.txt
+++ b/site_app/requirements.txt
@@ -14,7 +14,7 @@ defusedxml==0.7.1
 dj-database-url==2.2.0
 dj-rest-auth==6.0.0
 Django==5.1.1
-django-allauth[mfa,socialaccount]==65.0.2
+django-allauth[socialaccount]==65.0.2
 django-cors-headers==4.4.0
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
