--- a/site_app/requirements.txt
+++ b/site_app/requirements.txt
@@ -29,6 +29,7 @@ prompt_toolkit==3.0.48
 psycopg2-binary==2.9.9
 pycparser==2.22
 PyJWT==2.9.0
+pyotp==2.9.0
 pypng==0.20220715.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
